syntax = "proto3";

package users;

import "google/api/annotations.proto";

option go_package = "github.com/sonereker/simple-auth/pb";

service User {
  rpc Register(RegistrationRequest) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }
  rpc GetCurrent(EmptyParams) returns (UserResponse) {
    option (google.api.http) = {
      get: "/v1/users/current"
    };
  }
}

message EmptyParams {}

message RegistrationRequest {
  string name = 1;
  string surname = 2;
  string email = 3;
  string password = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string email = 1;
}

message AuthenticationResponse {
  string token = 1;
  UserResponse user = 3;
}

message EmptyResponse {}
